[gd_scene load_steps=9 format=3 uid="uid://ddrhkx6jhpby6"]

[ext_resource type="Script" path="res://scripts/character_creator.gd" id="1_5b05v"]
[ext_resource type="Texture2D" uid="uid://d00aubj2tay7j" path="res://ui_art/white_square.png" id="1_djv6p"]
[ext_resource type="FontFile" uid="uid://bekn0vgx22mbc" path="res://fonts/century-gothic/GOTHICB.TTF" id="3_lg4ht"]
[ext_resource type="PackedScene" uid="uid://hfpaouxmxtmv" path="res://prefabs/next.tscn" id="4_oooqi"]
[ext_resource type="PackedScene" uid="uid://cwwc0uviiic3g" path="res://prefabs/back.tscn" id="5_8jqip"]
[ext_resource type="FontFile" uid="uid://vv01ikl12mma" path="res://fonts/century-gothic/Century Gothic.ttf" id="5_j1f1y"]
[ext_resource type="Texture2D" uid="uid://uabljio00qgq" path="res://ui_art/green_square.png" id="8_sql2g"]
[ext_resource type="Texture2D" uid="uid://2ocb0b1hnlbn" path="res://ui_art/blue_square.png" id="9_dfvy3"]

[node name="character_creator" type="CanvasLayer"]
script = ExtResource("1_5b05v")

[node name="BG" type="TextureRect" parent="."]
modulate = Color(0.678431, 0.364706, 0.364706, 1)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.997
offset_right = -3.0
offset_bottom = -0.0560303
texture = ExtResource("1_djv6p")

[node name="Title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.17
anchor_top = 0.065
anchor_right = 0.826
anchor_bottom = 0.204
offset_left = 0.160004
offset_top = -0.120003
offset_right = 3.44794
offset_bottom = -0.192001
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_lg4ht")
theme_override_font_sizes/font_size = 50
text = "choose your identity"
horizontal_alignment = 1

[node name="Create" parent="." instance=ExtResource("4_oooqi")]
anchors_preset = -1
anchor_left = 0.642
anchor_top = 0.833
anchor_right = 0.816
anchor_bottom = 0.917
offset_left = 0.415955
offset_top = 4.216
offset_right = -0.0321045
offset_bottom = -0.216125
theme_override_font_sizes/font_size = 20
text = "CREATE"

[node name="Back" parent="." instance=ExtResource("5_8jqip")]
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.84
anchor_right = 0.368
anchor_bottom = 0.914
offset_left = 0.511993
offset_top = -0.320007
offset_right = 0.0638733
offset_bottom = 1.72791

[node name="Username" type="TextEdit" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.392
anchor_top = 0.84
anchor_right = 0.618
anchor_bottom = 0.92
offset_left = 0.415985
offset_top = -0.320007
offset_right = 3.06396
offset_bottom = -0.160034
theme_override_fonts/font = ExtResource("5_j1f1y")
theme_override_font_sizes/font_size = 30
placeholder_text = "username"

[node name="Looks" type="ItemList" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.028
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.765
offset_left = -0.256001
offset_bottom = -1.72003
theme_override_fonts/font = ExtResource("5_j1f1y")
allow_reselect = true
item_count = 4
max_columns = 2
same_column_width = true
fixed_column_width = 100
item_0/text = "test1"
item_1/text = "test 2"
item_2/text = "test 3"
item_3/text = "test 4"

[node name="Display" type="TextureRect" parent="."]
visible = false
modulate = Color(0.278431, 0.278431, 0.278431, 0.721569)
anchors_preset = -1
anchor_left = 0.715
anchor_top = 0.204
anchor_right = 0.958
anchor_bottom = 0.83
offset_left = 0.319946
offset_top = -4.192
offset_right = -1.61609
offset_bottom = 0.159973
texture = ExtResource("1_djv6p")
expand_mode = 1

[node name="Class1" type="TextureButton" parent="."]
self_modulate = Color(0.172549, 0.172549, 0.172549, 1)
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.258
anchor_right = 0.368
anchor_bottom = 0.722
offset_left = 0.511993
offset_top = 0.815994
offset_right = 0.0639648
offset_bottom = 0.143951
texture_normal = ExtResource("1_djv6p")
texture_pressed = ExtResource("8_sql2g")
texture_hover = ExtResource("9_dfvy3")
texture_disabled = ExtResource("1_djv6p")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Button" parent="Class1"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.143
anchor_right = 1.0
offset_top = 0.0349998
theme_override_fonts/font = ExtResource("5_j1f1y")
disabled = true
text = "SOUL SIPHON"

[node name="Details1" type="Button" parent="Class1"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.131
offset_bottom = -0.0950012
theme_override_fonts/font = ExtResource("5_j1f1y")
theme_override_font_sizes/font_size = 15
disabled = true
text = "VAMP ASCENDS"

[node name="Label2" type="Label" parent="Class1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.08
anchor_right = 0.88
anchor_bottom = 0.907
offset_right = -1.52588e-05
offset_bottom = -0.100006
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_j1f1y")
text = "PLAYER HEALS FOR 
A PERCENTAGE OF
DAMAGE DEALT,
 INCREASED 
CURRENCY
GAIN


REDUCED MAX
HEALTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Class2" type="TextureButton" parent="."]
self_modulate = Color(0.172549, 0.172549, 0.172549, 1)
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.258
anchor_right = 0.59
anchor_bottom = 0.719
offset_left = -0.384033
offset_top = 0.815994
offset_right = 0.319946
offset_bottom = 2.08798
texture_normal = ExtResource("1_djv6p")
texture_pressed = ExtResource("8_sql2g")
texture_hover = ExtResource("9_dfvy3")
texture_disabled = ExtResource("1_djv6p")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Button" parent="Class2"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.143
anchor_right = 1.0
offset_top = 0.0349998
theme_override_fonts/font = ExtResource("5_j1f1y")
disabled = true
text = "SLAYER"

[node name="Details2" type="Button" parent="Class2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.967
anchor_right = 1.0
anchor_bottom = 1.131
offset_top = 8.08498
offset_bottom = -0.0950012
theme_override_fonts/font = ExtResource("5_j1f1y")
theme_override_font_sizes/font_size = 15
disabled = true
text = "DAMAGE ASCENDS"

[node name="Label2" type="Label" parent="Class2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.08
anchor_right = 0.88
anchor_bottom = 0.907
offset_right = -1.52588e-05
offset_bottom = -0.100006
theme_override_colors/font_color = Color(1, 0.87451, 0.443137, 1)
theme_override_fonts/font = ExtResource("5_j1f1y")
text = "PLAYER GAINS
SCALING CRITICAL
CHANCE,
CRITICAL DAMAGE, 
OVERALL 
DAMAGE


REDUCED MAX 
SPIRIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Class3" type="TextureButton" parent="."]
self_modulate = Color(0.172549, 0.172549, 0.172549, 1)
anchors_preset = -1
anchor_left = 0.639
anchor_top = 0.259
anchor_right = 0.812
anchor_bottom = 0.719
offset_left = -0.128052
offset_top = 0.167999
offset_right = 0.575928
offset_bottom = 2.08798
texture_normal = ExtResource("1_djv6p")
texture_pressed = ExtResource("8_sql2g")
texture_hover = ExtResource("9_dfvy3")
texture_disabled = ExtResource("1_djv6p")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Button" parent="Class3"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.143
anchor_right = 1.0
anchor_bottom = -0.012
offset_top = 0.0349998
offset_bottom = 2.94
theme_override_fonts/font = ExtResource("5_j1f1y")
disabled = true
text = "JUGGERNAUT"

[node name="Details3" type="Button" parent="Class3"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.131
offset_bottom = -0.0950012
theme_override_fonts/font = ExtResource("5_j1f1y")
theme_override_font_sizes/font_size = 15
disabled = true
text = "HEALTH ASCENDS"

[node name="Label2" type="Label" parent="Class3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.08
anchor_right = 0.88
anchor_bottom = 0.907
offset_left = -8.0
offset_right = 8.99998
offset_bottom = -0.100006
theme_override_colors/font_color = Color(0, 0.913725, 0.94902, 1)
theme_override_fonts/font = ExtResource("5_j1f1y")
text = "PLAYER GAINS A 
SIGNIFICANT
AMOUNT OF HEALTH
AND RESISTANCE


REDUCED MOVEMENT
SPEED"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Create" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="Username" to="." method="_on_username_text_changed"]
[connection signal="pressed" from="Class1" to="." method="_on_class_1_pressed"]
[connection signal="pressed" from="Class2" to="." method="_on_class_2_pressed"]
[connection signal="pressed" from="Class3" to="." method="_on_class_3_pressed"]
